--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@fontsource/inter-tight/400.css;
+@fontsource/inter-tight/500.css;
+@fontsource/inter-tight/700.css;
